Version 1.3 beta 1 (changes from aircrack-ng 1.2) - Released XX XXX XXXX:
* Airodump-ng: Fixed running in the background.
* FreeRADIUS-WPE: Updated instructions for v3.0.17
* WPAClean: Fixed crash with invalid prism2 header PCAP and added tests.
* General: Added --without-opt to disable stack protector when using GCC >= 4.9
* General: Various fixes

Version 1.2 (changes from aircrack-ng 1.2-rc5) - Released 15 Apr 2018:
* General: Fixed compiling Windows binaries and updated README.md/INSTALLING.
* General: Fixed commands to install dependencies on Debian/Ubuntu and FreeBSD.
* General: Added command to install dependencies on Fedora/CentOS/RHEL.
* General: Removed packages/ directory.
* General: Added Alpine Linux and Kali Linux buildbots.
* General: Fixed configure with --with-libpcap-include=/somewhere/include and --with-libpcap-lib=/somewhere/lib.
* General: Fixed search for ethtool when running as a non-root user.
* General: Various fixes.
* Airmon-ng: Fixed mktemp on Alpine Linux.

Version 1.2-rc5 (changes from aircrack-ng 1.2-rc4) - Released 03 Apr 2018:
* General: Switching to autotools which allows compiling on more plateforms.
* General: Updated README.md and INSTALLING files.
* General: Fixed compilation on a lot of platforms.
* General: Fixed compilation warnings across platforms and compilers.
* General: Fixed typos in the tools and in manpages.
* General: Replace %d/ld with %u/lu for unsigned printf parameters.
* General: Added option to disable stack protector.
* General: Improved makefile to get reproducible builds.
* General: Fixed compilation with OpenSSL 1.1.0.
* General: Updated radiotap parsing code.
* General: Updated all URLs to use HTTPS.
* General: Fixed compilation with libreSSL.
* General: Added WPS 2.0 test PCAP.
* General: Do not use stackguard on Windows.
* General: Fixed warnings on GCC7.
* General: Improved code quality using Coverity Scan.
* General: Added badges for Coverity scan and Intel compiler buildbot